# Home_monitor

./: LICENSE  README.md
RP2040/: blink.h
RP2040/blink/: CMakeLists.txt  blink.c
RP2040/pwm/: CMakeLists.txt
RP2040/uart/: CMakeLists.txt  uart.c  uart.h
STM32/: Home_monitor.ioc  STM32.ioc
STM32/Async_UART/: Async_UART.ioc
STM32/Async_UART/Core/Src/: main.c  stm32f1xx_hal_msp.c  usart.c
STM32/Async_UART/MDK-ARM/: Async_UART.uvguix.14506  Async_UART.uvoptx  Async_UART.uvprojx
STM32/Async_UART/MDK-ARM/Async_UART/: Async_UART.axf  Async_UART.build_log.htm  Async_UART.htm  Async_UART.lnp  Async_UART_Async_UART.dep
STM32/Async_UART/MDK-ARM/RTE/_Async_UART/: RTE_Components.h
STM32/Blink_LED/: Blink_LED.ioc
STM32/Blink_LED/Core/Inc/: bsp_led.h  main.h
STM32/Blink_LED/Core/Src/: gpio.c  main.c
STM32/Blink_LED/MDK-ARM/: Blink_LED.uvguix.14506  Blink_LED.uvoptx  Blink_LED.uvprojx
STM32/GCC/: .mxproject  Makefile
STM32/Keil/: .mxproject
STM32/Keil/Core/Inc/: gpio.h
STM32/Keil/Core/Src/: main.c
STM32/Keil/MDK-ARM/: Home_monitor.uvguix.14506  Home_monitor.uvoptx  Home_monitor.uvprojx
STM32/Keil/MDK-ARM/Home_monitor/: Home_monitor.axf  Home_monitor.build_log.htm  Home_monitor.htm  Home_monitor.lnp  Home_monitor_Home_monitor.dep
STM32/Keil/MDK-ARM/RTE/_Home_monitor/: RTE_Components.h
STM32/MDK-ARM/: STM32.uvoptx  STM32.uvprojx
